--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-hot-toast": "^2.4.0",
     "sass": "^1.44.0"
   },
   "devDependencies": {
