Adicionado seed.ts para popular as pizzas no BD

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "lodash": "^4.17.21",
