--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draggable": "^4.4.5",
     "react-feather": "^2.0.9",
     "react-hot-toast": "^2.4.0",
     "sass": "^1.44.0"
