--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.10",
     "@prisma/client": "^4.9.0",
     "lodash": "^4.17.21",
     "next": "12.0.7",
