--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 
-DATABASE_URL="postgresql://postgres:p@ssw0rd@localhost:5432/pizza_ordering"
+DATABASE_URL="mysql://root:p@ssw0rd@localhost:3306/pizza_ordering"
