--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 DATABASE_URL="mongodb://localhost:27017/pizza_ordering"
 
 DATABASE_URL="mysql://root:p@ssw0rd@localhost:3306/pizza_ordering"
+
+DATABASE_URL="postgresql://postgres:p@ssw0rd@localhost:5432/pizza_ordering"
