--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
-DATABASE_URL="mongodb://localhost:27017/pizza_ordering"
+DATABASE_URL="mongodb://localhost:27017/pizza_ordering?directConnection=true"
 
 DATABASE_URL="mysql://root:p@ssw0rd@localhost:3306/pizza_ordering"
 
